--- a/admin/app/globals.css
+++ b/admin/app/globals.css
@@ -4,7 +4,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -32,4 +32,8 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+} */
+
+.custom-btn {
+  @apply flex flex-row relative justify-center items-center py-3.5 px-7 text-base outline-none rounded font-semibold;
 }
