--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -9,6 +9,13 @@
   @apply flex flex-row relative justify-center items-center py-3.5 px-7 text-base outline-none rounded font-semibold;
 }
 
+.custome-input {
+  @apply appearance-none dark:placeholder-gray-100 h-12 relative w-full px-3 py-2 border border-gray-600 placeholder-dark-500 dark:bg-dark-500 dark:text-gray-100 text-gray-900 rounded focus:outline-none focus:ring-primary-600 focus:border-primary-500 focus:z-10 sm:text-sm
+}
+
+.input__error{
+  @apply text-red-500 font-main text-sm mt-1
+}
  .custom-container {
   @apply max-w-lg w-full border border-solid shadow-sm border-stroke dark:border-gray-700 dark:text-gray-100 py-12 px-4 rounded-lg space-y-4;
 }
@@ -18,15 +25,15 @@
 }
 
 .header__right{
- @apply flex justify-evenly items-center space-x-10
+ @apply flex justify-evenly items-center space-x-7
 }
 
 .footer{
-  @apply flex justify-evenly flex-wrap font-main items-center px-4 py-2 bg-dark-600 text-gray-100 dark:bg-gray-400 dark:text-dark-600
+  @apply flex justify-evenly flex-wrap min-w-full overflow-x-hidden font-main items-center px-4 py-2 bg-dark-600 text-gray-100 dark:bg-gray-400 dark:text-dark-600
 }
 
 .footer__custom{
-@apply w-32 m-5
+@apply w-1/5 m-5
 }
 
 .footer__custome__title{
@@ -40,3 +47,4 @@
 .footer__custome__social{
   @apply flex flex-row flex-wrap space-x-3
 }
+
