--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -23,7 +23,7 @@
 }
 
 .header__custom{
-  @apply flex justify-between items-center px-3 pt-2 font-main dark:bg-dark-700 text-black dark:text-gray-100
+  @apply flex justify-between items-center px-3 pt-1 font-main dark:bg-dark-700 text-white dark:text-gray-100 fixed top-0 left-0 right-0 z-10 shadow-md backdrop-blur-sm
 }
 
 .header__right{
@@ -48,5 +48,17 @@
 
 .footer__custome__social{
   @apply flex flex-row flex-wrap space-x-3
+}
+
+.custome-under-construction{
+  @apply min-h-screen flex flex-col items-center justify-center dark:bg-dark-700
+}
+
+.custome-under-construction-title{
+  @apply text-3xl md:text-4xl font-bold font-main mb-4 dark:text-white
+}
+
+.custome-under-construction-timer{
+  @apply text-6xl font-main text-center md:text-2xl mb-8 dark:text-white
 }
 
