--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -6,16 +6,36 @@
 @tailwind utilities;
 
 
- .custom-btn {
-  @apply flex flex-row relative justify-center items-center py-3.5 px-7 text-base outline-none rounded font-semibold;
+/* .custom-btn {
+  @apply flex flex-row relative justify-center items-center py-3.5 px-7 text-base outline-none font-semibold
+} */
+/* 
+.custom-btn {
+  @apply flex flex-row justify-center items-center py-2 px-4 sm:py-3 sm:px-6 lg:py-4 lg:px-8 text-sm sm:text-base lg:text-lg outline-none focus:outline-none 
+} */
+.custom-btn {
+  @apply  flex justify-center items-center py-2 px-3 sm:py-3 sm:px-4  text-xs sm:text-base  outline-none focus:outline-none font-main
+
+}
+
+.follow-btn {
+  @apply font-main px-5 py-2 text-sm md:text-base font-medium rounded-full  text-white bg-primary-600 hover:bg-primary-700 focus:outline-none
+}
+
+.profile-image{
+  @apply rounded-full
 }
 
 .custome-input {
-  @apply appearance-none dark:placeholder-gray-100 h-12 relative w-full px-3 py-2 border border-gray-600 placeholder-dark-500 dark:bg-dark-500 dark:text-gray-100 text-gray-900 rounded focus:outline-none focus:ring-primary-600 focus:border-primary-500 focus:z-10 sm:text-sm
+  @apply appearance-none dark:placeholder-gray-100 h-fit sm:h-12 relative w-full px-3 py-2 border border-gray-600 placeholder-dark-500 dark:bg-dark-500 dark:text-gray-100 text-gray-900 rounded focus:outline-none focus:ring-primary-600 focus:border-primary-500 focus:z-10 text-xs sm:text-sm md:text-base
 }
 
 .input__error{
   @apply text-red-500 font-main text-sm mt-1
+}
+
+.main_container{
+  @apply min-h-screen flex flex-col items-center justify-center  sm:px-6 lg:px-8  overflow-y-hidden bg-cover 
 }
 
  .custom-container {
@@ -23,7 +43,7 @@
 }
 
 .header__custom{
-  @apply flex justify-between items-center px-3 pt-1 font-main dark:bg-dark-700 text-white dark:text-gray-100 fixed top-0 left-0 right-0 z-10 shadow-md backdrop-blur-sm
+  @apply flex justify-between items-center px-3 pt-1 font-main dark:bg-dark-700 text-dark-700 dark:text-gray-100 fixed top-0 left-0 right-0 z-10 shadow-md bg-white
 }
 
 .header__right{
@@ -31,7 +51,7 @@
 }
 
 .footer{
-  @apply flex justify-evenly flex-wrap min-w-full overflow-x-hidden font-main items-center px-4 py-2 bg-primary-100 text-dark-700 dark:text-gray-100 dark:bg-dark-600
+  @apply flex justify-evenly flex-wrap min-w-full overflow-x-hidden font-main px-4 py-2 bg-primary-100 text-dark-700 dark:text-gray-100 dark:bg-dark-600
 }
 
 .footer__custom{
@@ -47,7 +67,7 @@
 }
 
 .footer__custome__social{
-  @apply flex flex-row flex-wrap space-x-3
+  @apply flex flex-row space-x-3 sm:space-x-1
 }
 
 .custome-under-construction{
@@ -62,3 +82,18 @@
   @apply text-6xl font-main text-center md:text-2xl mb-8 dark:text-white
 }
 
+.features_container{
+  @apply bg-white shadow-lg rounded-lg overflow-hidden w-full md:w-1/2 lg:w-1/3 xl:w-1/4 p-6 m-4 flex flex-col items-center
+}
+
+.top-doctors{
+  @apply bg-white shadow-lg rounded-lg overflow-hidden w-96 md:w-1/2 lg:w-1/3 xl:w-1/4 p-4 m-4 h-fit
+}
+
+.proffesional-type{
+  @apply bg-secondary-600 text-secondary-700 bg-opacity-5 rounded px-2 py-1 ml-2 font-main
+}
+
+.icon-gap{
+  @apply mr-2
+}
