--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -6,13 +6,6 @@
 @tailwind utilities;
 
 
-/* .custom-btn {
-  @apply flex flex-row relative justify-center items-center py-3.5 px-7 text-base outline-none font-semibold
-} */
-/* 
-.custom-btn {
-  @apply flex flex-row justify-center items-center py-2 px-4 sm:py-3 sm:px-6 lg:py-4 lg:px-8 text-sm sm:text-base lg:text-lg outline-none focus:outline-none 
-} */
 .custom-btn {
   @apply  flex justify-center items-center py-2 px-3 sm:py-3 sm:px-4  text-xs sm:text-base  outline-none focus:outline-none font-main
 
@@ -27,11 +20,11 @@
 }
 
 .custome-input {
-  @apply appearance-none dark:placeholder-gray-100 h-fit sm:h-12 relative w-full px-3 py-2 border border-gray-600 placeholder-dark-500 dark:bg-dark-500 dark:text-gray-100 text-gray-900 rounded focus:outline-none focus:ring-primary-600 focus:border-primary-500 focus:z-10 text-xs sm:text-sm md:text-base
+  @apply appearance-none dark:placeholder-gray-100 h-fit sm:h-12 relative w-full px-3 py-2 border border-gray-600 placeholder-dark-300 placeholder:text-sm dark:bg-dark-500 dark:text-gray-100 text-gray-900 rounded focus:outline-none focus:ring-primary-600 focus:border-primary-500 focus:z-10
 }
 
 .input__error{
-  @apply text-red-500 font-main text-sm mt-1
+  @apply text-red-500 font-main text-xs mt-1
 }
 
 .main_container{
@@ -39,7 +32,7 @@
 }
 
  .custom-container {
-  @apply max-w-md w-full border border-solid shadow-sm border-stroke dark:border-gray-700 dark:text-gray-100 py-12 px-4 rounded-lg space-y-4;
+  @apply  w-fit border border-solid shadow-sm border-stroke dark:border-gray-700 dark:text-gray-100 py-6 px-4 rounded-lg space-y-4 font-main;
 }
 
 .header__custom{
@@ -83,7 +76,7 @@
 }
 
 .features_container{
-  @apply bg-white shadow-lg rounded-lg overflow-hidden w-full md:w-1/2 lg:w-1/3 xl:w-1/4 p-6 m-4 flex flex-col items-center
+  @apply bg-white shadow-lg rounded-lg overflow-hidden w-full h-fit md:w-1/2 lg:w-1/3 xl:w-1/4 p-6 m-4 flex flex-col items-center
 }
 
 .top-doctors{
@@ -96,4 +89,8 @@
 
 .icon-gap{
   @apply mr-2
+}
+
+.file-hidden{
+  @apply hidden
 }
