--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -36,7 +36,7 @@
 }
 
 .header__custom{
-  @apply flex justify-between items-center px-3 pt-1 font-main dark:bg-dark-700 text-dark-700 dark:text-gray-100 fixed top-0 left-0 right-0 z-10 shadow-md bg-white
+  @apply flex justify-between h-auto w-auto items-center px-3 pt-1 font-main dark:bg-dark-700 text-dark-700 dark:text-gray-100 fixed top-0 left-0 right-0 z-10 shadow-md bg-white
 }
 
 .header__right{
@@ -93,4 +93,8 @@
 
 .file-hidden{
   @apply hidden
+}
+
+.auto{
+  @apply h-auto w-auto
 }
