--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -7,9 +7,9 @@
 
 
 .custom-btn {
-  @apply  flex justify-center items-center py-2 px-3 sm:py-3 sm:px-4  text-xs sm:text-base  outline-none focus:outline-none font-main
-
+  @apply relative flex items-center justify-center flex-nowrap text-center py-2 px-3 sm:py-3 sm:px-4 text-xs sm:text-base outline-none focus:outline-none font-main;
 }
+
 
 .follow-btn {
   @apply font-main px-5 py-2 text-sm md:text-base font-medium rounded-full  text-white bg-primary-600 hover:bg-primary-700 focus:outline-none
@@ -36,7 +36,7 @@
 }
 
 .header__custom{
-  @apply flex justify-between h-auto w-auto items-center px-3 pt-1 font-main dark:bg-dark-700 text-dark-700 dark:text-gray-100 fixed top-0 left-0 right-0 z-10 shadow-md bg-white
+  @apply flex justify-between h-auto w-auto items-center px-3 py-2 font-main dark:bg-dark-700 text-dark-700 dark:text-gray-100 fixed top-0 left-0 right-0 z-10 shadow-md bg-white
 }
 
 .header__right{
@@ -56,7 +56,7 @@
 }
 
 .footer__custome__list{
-  @apply flex flex-col space-y-2 mt-2
+  @apply flex flex-col space-y-2 mt-2 text-sm
 }
 
 .footer__custome__social{
@@ -97,4 +97,8 @@
 
 .auto{
   @apply h-auto w-auto
+}
+
+.space_buttons{
+  @apply flex items-center justify-evenly w-full my-2
 }
