--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -126,7 +126,7 @@
 }
 
 .top-doctors {
-  @apply bg-white dark:bg-slate-950 dark:text-slate-50 shadow-lg rounded-lg overflow-hidden w-96 md:w-1/2 lg:w-1/3 xl:w-1/4 p-4 m-4 h-fit;
+  @apply bg-white dark:bg-slate-900 dark:text-slate-50 shadow-sm rounded-lg overflow-hidden w-[350px] p-4 m-4 h-[340px];
 }
 
 .proffesional-type {
