--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -9,8 +9,8 @@
   font-family: "Poppins";
 }
 
-body{
-  @apply bg-white dark:bg-slate-800
+body {
+  @apply bg-white dark:bg-slate-800;
 }
 
 .glow {
@@ -78,7 +78,7 @@ body{
 }
 
 .input__error {
-  @apply text-red-500 font-main text-xs mt-1 flex flex-wrap;
+  @apply text-red-500 font-main text-xs mt-1 flex flex-wrap w-[250px];
 }
 
 .main_container {
@@ -86,7 +86,7 @@ body{
 }
 
 .custom-container {
-  @apply  bg-white border border-solid shadow-sm border-stroke dark:border-gray-700 dark:bg-slate-800 dark:text-slate-50 py-6 px-4 rounded-lg space-y-4 font-main backdrop-blur-sm;
+  @apply bg-white border border-solid shadow-sm border-stroke dark:border-gray-700 dark:bg-slate-800 dark:text-slate-50 py-6 px-4 rounded-lg space-y-4 font-main backdrop-blur-sm;
 }
 
 .header__custom {
@@ -146,7 +146,7 @@ body{
 }
 
 .auto {
-  @apply h-auto w-auto ;
+  @apply h-auto w-auto;
 }
 
 .space_buttons {
@@ -165,7 +165,6 @@ body{
   background-size: cover;
   background-position: center;
 }
-
 
 .db-header-left {
   flex: 1;
@@ -192,8 +191,8 @@ body{
 }
 
 .hide-scrollbar {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;     /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 .hide-scrollbar::-webkit-scrollbar {
