--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -198,3 +198,46 @@ body {
 .hide-scrollbar::-webkit-scrollbar {
   display: none; /* Chrome, Safari, and Opera */
 }
+
+.custome-scrollbar::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+.custome-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #6b7280; /* Change color as needed */
+  border-radius: 10px;
+}
+
+.custome-scrollbar::-webkit-scrollbar-track {
+  background-color: #e5e7eb; /* Change color as needed */
+  border-radius: 10px;
+}
+
+/* Hide scrollbar arrows */
+.custome-scrollbar::-webkit-scrollbar-button {
+  display: none;
+  width: 0;
+  height: 0;
+}
+
+.ql-editor {
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.ql-toolbar {
+  @apply bg-slate-100 dark:bg-slate-800 border border-slate-400 dark:border-slate-600 dark:text-slate-500 text-slate-900 rounded;
+}
+
+.ql-container {
+  @apply border-slate-400 dark:border-slate-600;
+}
+
+.ql-snow .ql-stroke {
+  @apply stroke-slate-700 dark:stroke-slate-200;
+}
+
+.ql-snow .ql-fill {
+  @apply fill-slate-700 dark:fill-slate-200;
+}
