--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -93,26 +93,6 @@ body {
   @apply flex justify-between h-auto w-auto items-center px-3 py-2 font-main dark:bg-dark-700 text-dark-700 dark:text-gray-100 fixed top-0 left-0 right-0 z-10 shadow-md bg-white;
 }
 
-.footer {
-  @apply flex justify-evenly flex-wrap min-w-full font-main px-4 py-2 bg-primary-100  dark:text-gray-100 dark:bg-slate-900 backdrop-blur-sm;
-}
-
-.footer__custom {
-  @apply w-1/5 m-5;
-}
-
-.footer__custome__title {
-  @apply font-bold underline text-secondary-700 dark:text-primary-600;
-}
-
-.footer__custome__list {
-  @apply flex flex-col space-y-2 mt-2 text-sm;
-}
-
-.footer__custome__social {
-  @apply flex flex-row space-x-3 sm:space-x-1;
-}
-
 .custome-under-construction {
   @apply min-h-screen flex flex-col items-center justify-center dark:bg-dark-700;
 }
@@ -240,4 +220,16 @@ body {
 
 .ql-snow .ql-fill {
   @apply fill-slate-700 dark:fill-slate-200;
+}
+
+/* Hide the spinners in Webkit browsers */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Hide the spinners in Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
