--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -17,6 +17,27 @@ body {
   animation: glowing 1500ms infinite;
 }
 
+@layer utilities {
+  input:-webkit-autofill {
+    @apply bg-white text-gray-800 shadow-none;
+    -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+    -webkit-text-fill-color: #000 !important;
+  }
+
+  input:-webkit-autofill:focus {
+    @apply bg-white text-black shadow-none;
+    -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+    -webkit-text-fill-color: #000 !important;
+  }
+}
+
+input:-webkit-autofill:hover {
+  @apply bg-white text-black shadow-none;
+  -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+  -webkit-text-fill-color: #000 !important;
+}
+
+
 @keyframes glowing {
   0% {
     box-shadow: 0 0 10px #fff;
@@ -80,9 +101,22 @@ body {
 }
 
 .shad-input {
-  @apply placeholder:text-gray-600 bg-slate-50 border border-black/30 hover:border-black h-12 focus-visible:ring-4 focus-visible:ring-primary-300 focus-visible:outline-none focus:border-black focus-visible:ring-offset-0 !important;
+  @apply placeholder:bg-white text-gray-800 placeholder:text-gray-600 bg-slate-50 border border-black/30 hover:border-black h-12 focus-visible:ring-4 focus:ring-primary-400 focus-visible:ring-primary-300 focus-visible:outline-none focus:border-black focus-visible:ring-offset-0 !important;
 }
 
+
+.shad-select-trigger {
+  @apply placeholder:bg-white max-w-[50%] text-gray-800 placeholder:text-gray-300 bg-slate-50 border border-black/30 hover:border-black h-12 focus-visible:ring-4 focus:ring-primary-400 focus-visible:ring-primary-300 focus-visible:outline-none focus:border-black focus-visible:ring-offset-0 !important;
+}
+
+.shad-select-content {
+  @apply bg-white text-gray-800 !important;
+  ;
+}
+
+.shad-select-item {
+  @apply focus-visible:bg-slate-200 hover:bg-slate-200
+}
 
 .shad-form-btn {
   @apply bg-primary-400 p-4 h-12 text-gray-900 hover:bg-primary-200 text-lg font-medium !important;
