--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -119,7 +119,7 @@ input:-webkit-autofill:hover {
 }
 
 .shad-form-btn {
-  @apply bg-primary-400 p-4 h-12 text-gray-900 hover:bg-primary-200 text-lg font-medium !important;
+  @apply bg-primary-600 text-white p-4 h-12 font-semibold hover:bg-primary-500 text-lg  !important;
 }
 
 .checkbox-label {
